Initial place holder files. Added modularity concept.

--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -14,6 +14,10 @@
 
 
 	<dependencies>
+        <dependency>
+            <groupId>com.kildeen.ref</groupId>
+            <artifactId>ref-core-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
@@ -45,14 +49,13 @@
             <artifactId>deltaspike-core-api</artifactId>
             <version>${ds.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-impl</artifactId>
             <version>${ds.version}</version>
             <scope>runtime</scope>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
@@ -93,5 +96,36 @@
         </dependency>
 
 	</dependencies>
+
+    <build><plugins>
+        <plugin>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa-maven-plugin</artifactId>
+            <version>2.3.0</version>
+            <configuration>
+                <includes>**/domain/*.class</includes>
+                <excludes>**/entities/XML*.class</excludes>
+                <addDefaultConstructor>true</addDefaultConstructor>
+                <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>enhancer</id>
+                    <phase>process-classes</phase>
+                    <goals>
+                        <goal>enhance</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.openjpa</groupId>
+                    <artifactId>openjpa</artifactId>
+                    <!-- set the version to be the same as the level in your runtime -->
+                    <version>2.3.0</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+    </plugins></build>
 
 </project>
