--- a/modules/admin/core/pom.xml
+++ b/modules/admin/core/pom.xml
@@ -14,6 +14,10 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.kildeen.ref</groupId>
+            <artifactId>ref-core-impl</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
