--- a/pom.xml
+++ b/pom.xml
@@ -1,98 +1,75 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.kildeen.ref</groupId>
-	<artifactId>ref-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>com.kildeen.ref</groupId>
+    <artifactId>ref-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<name>ref</name>
-	<description>
+    <name>ref</name>
+    <description>
         The parent project for Marketplace Reference Project
-	</description>
+    </description>
 
-	<modules>
-		<module>core</module>
-		<module>web</module>
-		<module>modules</module>
+    <modules>
+        <module>core</module>
+        <module>web</module>
+        <module>modules</module>
 
-	</modules>
+    </modules>
 
-	<properties>
+    <properties>
         <ds.version>0.6</ds.version>
-	</properties>
+        <public.module>0.6</public.module>
+        <public.module>0.6</public.module>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.kildeen.ref</groupId>
-				<artifactId>ref-core-api</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+    </properties>
 
-			<dependency>
-				<groupId>com.kildeen.ref</groupId>
-				<artifactId>ref-public-core</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.kildeen.ref</groupId>
+                <artifactId>ref-core-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-			<dependency>
-				<groupId>com.kildeen.ref</groupId>
-				<artifactId>ref-admin-core</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+            <dependency>
+                <groupId>com.kildeen.ref</groupId>
+                <artifactId>ref-core-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-		</dependencies>
+            <dependency>
+                <groupId>com.kildeen.ref</groupId>
+                <artifactId>ref-public-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-	</dependencyManagement>
+            <dependency>
+                <groupId>com.kildeen.ref</groupId>
+                <artifactId>ref-public-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.kildeen.ref</groupId>
+                <artifactId>ref-admin-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.kildeen.ref</groupId>
+                <artifactId>ref-admin-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+        </dependencies>
+
+    </dependencyManagement>
 
     <dependencies>
-
-        <!-- Specifications -->
-        <!-- JSR-330 -->
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-atinject_1.0_spec</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <!-- JSR-299 -->
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-interceptor_1.1_spec</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-validation_1.0_spec</artifactId>
-            <version>1.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-
 
         <dependency>
             <groupId>dom4j</groupId>
@@ -117,6 +94,68 @@
             <artifactId>guava</artifactId>
             <version>16.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.openejb</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0-5</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.openejb.maven</groupId>
+                        <artifactId>tomee-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <configuration>
+                            <!--
+                                                <context>ROOT</context>
+                            -->
+                            <webapps>
+                                <webapp>
+                                    com.kildeen.ref:ref-web:${project.version}:war?name=apa
+                                </webapp>
+                            </webapps>
+
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+         
+        </plugins>
+    </build>
 
 </project>
