--- a/modules/admin/web/pom.xml
+++ b/modules/admin/web/pom.xml
@@ -14,6 +14,10 @@
     <name>ref-admin-web</name>
 
     <dependencies>
+        <dependency>
+            <groupId>com.kildeen.ref</groupId>
+            <artifactId>ref-admin-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
