--- a/modules/admin/core/pom.xml
+++ b/modules/admin/core/pom.xml
@@ -18,6 +18,12 @@
             <groupId>com.kildeen.ref</groupId>
             <artifactId>ref-core-impl</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jsf-module-api</artifactId>
+            <version>${ds.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
