--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -95,6 +95,15 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
 	</dependencies>
 
     <build><plugins>
