--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,30 +1,148 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.kildeen.ref</groupId>
-		<artifactId>ref-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>com.kildeen.ref</groupId>
+        <artifactId>ref-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
-	<groupId>com.kildeen.ref</groupId>
-	<artifactId>ref-web-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+    <artifactId>ref-web</artifactId>
+    <name>ref-web</name>
+    <packaging>war</packaging>
 
-	<packaging>pom</packaging>
 
-	<name>ref-web-parent</name>
+    <properties>
 
-	<description>
-        The parent project for Admin module
-	</description>
+    </properties>
 
-	<modules>
-		<module>api</module>
-		<module>impl</module>
-        <module>all</module>
+    <dependencies>
+        <dependency>
+            <groupId>com.kildeen.ref</groupId>
+            <artifactId>ref-core-api</artifactId>
+        </dependency>
 
-    </modules>
+        <dependency>
+            <groupId>com.kildeen.ref</groupId>
+            <artifactId>ref-core-impl</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jsf-module-api</artifactId>
+            <version>${ds.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jsf-module-impl</artifactId>
+            <version>${ds.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-servlet-module-api</artifactId>
+            <version>${ds.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-servlet-module-impl</artifactId>
+            <version>${ds.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>2.1.13</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <excludes>
+                        <!-- 						<exclude>${public.module}/*.*</exclude>
+ -->					</excludes>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <!-- 					<packagingExcludes>WEB-INF/classes/${public.module}/*.*</packagingExcludes>
+ -->				</configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.openejb.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <context>ROOT</context>
+                    <systemVariables>
+                        <faces.PROJECT_STAGE>Development</faces.PROJECT_STAGE>
+                    </systemVariables>
+                    <reloadOnUpdate>true</reloadOnUpdate>
+                    <synchronization>
+                        <updateInterval>1</updateInterval>
+                        <extensions>
+                            <extension>.class</extension>
+                            <extension>.xhtml</extension>
+                        </extensions>
+                    </synchronization>
+
+                    <args>-Xdebug -Xrunjdwp:transport=dt_socket,address=5005,suspend=n,server=y</args>
+
+                    <webapps>
+                    </webapps>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <configuration>
+                    <wtpversion>2.0</wtpversion>
+                    <downloadSources>true</downloadSources>
+                    <downloadJavadocs>true</downloadJavadocs>
+
+                    <additionalProjectFacets>
+                        <jst.jsf>2.2</jst.jsf>
+                        <jst.web>3.0</jst.web>
+                    </additionalProjectFacets>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
