--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -52,7 +52,7 @@
 
         <dependency>
             <groupId>org.apache.deltaspike.cdictrl</groupId>
-            <artifactId>deltaspike-cdictrl-owb</artifactId>
+            <artifactId>deltaspike-cdictrl-openejb</artifactId>
             <version>${ds.version}</version>
         </dependency>
 
