--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -154,6 +154,13 @@
             <version>7.0.0.Alpha3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa</artifactId>
+            <version>2.4.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
