--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -161,7 +161,11 @@
             <scope>provided</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
