--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,6 +23,30 @@
 	<modules>
 		<module>api</module>
 		<module>impl</module>
+		<module>domain</module>
+
 	</modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-data-module-api</artifactId>
+            <version>${ds.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-data-module-impl</artifactId>
+            <version>${ds.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa</artifactId>
+            <version>${openjpa.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
