--- a/core/mock/pom.xml
+++ b/core/mock/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ref-core-impl</artifactId>
-    <name>ref-core-impl</name>
+    <artifactId>ref-core-mock</artifactId>
+    <name>ref-core-mock</name>
     <packaging>jar</packaging>
 
 
@@ -113,6 +113,13 @@
             <groupId>org.apache.openejb</groupId>
             <artifactId>openejb-junit</artifactId>
             <version>4.6.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.openejb</groupId>
+            <artifactId>openejb-junit</artifactId>
+            <version>4.6.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -129,43 +136,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>javax.cache</groupId>
-            <artifactId>cache-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast</artifactId>
-            <version>3.2</version>
-        </dependency>
-
-   <!--
-        <dependency>
-            <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-jcache</artifactId>
-            <version>7.0.0.Alpha3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-cdi</artifactId>
-            <version>7.0.0.Alpha3</version>
-        </dependency>
-           -->
-        <dependency>
-            <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-core</artifactId>
-            <version>7.0.0.Alpha3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.openjpa</groupId>
-            <artifactId>openjpa</artifactId>
-            <version>2.3.0</version>
-            <scope>provided</scope>
-        </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
@@ -179,26 +149,6 @@
             <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.validator</groupId>
-            <artifactId>myfaces-extval-core</artifactId>
-            <version>2.0.7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.1-901.jdbc4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.bval</groupId>
-            <artifactId>bval-jsr303</artifactId>
-            <version>0.5</version>
-            <scope>provided</scope>
-        </dependency>
-
 
     </dependencies>
 </project>
