--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     </modules>
 
     <properties>
-        <ds.version>0.7-SNAPSHOT</ds.version>
-        <openjpa.version>2.4.0-SNAPSHOT</openjpa.version>
+        <ds.version>0.7</ds.version>
+        <openjpa.version>2.3.0</openjpa.version>
         <public.module>0.6</public.module>
         <public.module>0.6</public.module>
 
@@ -96,13 +96,13 @@
         <dependency>
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-api</artifactId>
-            <version>0.7-SNAPSHOT</version>
+            <version>0.7</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-impl</artifactId>
-            <version>0.7-SNAPSHOT</version>
+            <version>0.7</version>
         </dependency>
 
         <dependency>
