--- a/web/pom.xml
+++ b/web/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>2.1.13</version>
+            <version>2.2.3</version>
             <scope>provided</scope>
         </dependency>
 
@@ -82,10 +82,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.primefaces.themes</groupId>
+            <groupId>org.primefaces.extensions</groupId>
             <artifactId>all-themes</artifactId>
-            <version>1.0.10</version>
+            <version>1.0.7</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -122,7 +123,7 @@
             <plugin>
                 <groupId>org.apache.openejb.maven</groupId>
                 <artifactId>tomee-maven-plugin</artifactId>
-                <version>1.6.1-SNAPSHOT</version>
+                <version>1.6.0</version>
                 <configuration>
                     <context>ROOT</context>
                     <systemVariables>
@@ -147,10 +148,10 @@
 
                     <libs>
                     <lib>postgresql:postgresql:9.1-901.jdbc4</lib>
-                    <lib>remove:myfaces-api-2.1.15</lib>
-                    <lib>remove:myfaces-impl-2.1.15</lib>
+              <!--      <lib>remove:myfaces-api-2.1.13</lib>
+                    <lib>remove:myfaces-impl-2.1.13</lib>
                     <lib>org.apache.myfaces.core:myfaces-api:2.2.3</lib>
-                    <lib>org.apache.myfaces.core:myfaces-impl:2.2.3</lib>
+                    <lib>org.apache.myfaces.core:myfaces-impl:2.2.3</lib>    -->
                     </libs>
 
                 </configuration>
