--- a/web/pom.xml
+++ b/web/pom.xml
@@ -82,9 +82,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.primefaces.extensions</groupId>
+            <groupId>org.primefaces.themes</groupId>
             <artifactId>all-themes</artifactId>
-            <version>1.0.7</version>
+            <version>1.0.10</version>
         </dependency>
 
     </dependencies>
@@ -129,7 +129,7 @@
                     <systemVariables>
                         <faces.PROJECT_STAGE>Development</faces.PROJECT_STAGE>
                     </systemVariables>
-                    <reloadOnUpdate>true</reloadOnUpdate>
+                    <reloadOnUpdate>false</reloadOnUpdate>
                     <synchronization>
                         <updateInterval>1</updateInterval>
                         <extensions>
@@ -148,10 +148,10 @@
 
                     <libs>
                     <lib>postgresql:postgresql:9.1-901.jdbc4</lib>
-              <!--      <lib>remove:myfaces-api-2.1.13</lib>
+                  <lib>remove:myfaces-api-2.1.13</lib>
                     <lib>remove:myfaces-impl-2.1.13</lib>
                     <lib>org.apache.myfaces.core:myfaces-api:2.2.3</lib>
-                    <lib>org.apache.myfaces.core:myfaces-impl:2.2.3</lib>    -->
+                    <lib>org.apache.myfaces.core:myfaces-impl:2.2.3</lib>
                     </libs>
 
                 </configuration>
@@ -174,4 +174,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>PrimeFaces Maven Repository</name>
+            <url>http://repository.primefaces.org</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 </project>
