--- a/web/data/hsqldb/hsqldb.properties
+++ b/web/data/hsqldb/hsqldb.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.0
-#Wed May 14 21:56:54 CEST 2014
+#Sat May 17 00:05:01 CEST 2014
 version=2.3.0
-modified=yes
+modified=no
