--- a/web/pom.xml
+++ b/web/pom.xml
@@ -82,12 +82,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.primefaces.extensions</groupId>
+            <groupId>org.primefaces.themes</groupId>
             <artifactId>all-themes</artifactId>
-            <version>1.0.7</version>
+            <version>1.0.10</version>
         </dependency>
 
     </dependencies>
+
 
     <build>
 
@@ -174,4 +175,12 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+
+        <repository>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
+        </repository>
+             </repositories>
 </project>
