--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -144,6 +144,12 @@
            -->
 
         <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-core</artifactId>
+            <version>7.0.0.Alpha3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa</artifactId>
             <version>2.3.0</version>
