--- a/core/mock/pom.xml
+++ b/core/mock/pom.xml
@@ -34,13 +34,7 @@
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-impl</artifactId>
             <version>${ds.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-api</artifactId>
-            <version>${myfaces.version}</version>
-            <scope>provided</scope>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -80,6 +74,7 @@
             <groupId>org.apache.deltaspike.cdictrl</groupId>
             <artifactId>deltaspike-cdictrl-openejb</artifactId>
             <version>${ds.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
 
@@ -88,6 +83,7 @@
             <artifactId>deltaspike-test-control-module-api</artifactId>
             <version>${ds.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-test-control-module-impl</artifactId>
@@ -95,12 +91,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.openejb</groupId>
@@ -113,35 +103,50 @@
             <groupId>org.apache.openejb</groupId>
             <artifactId>openejb-junit</artifactId>
             <version>4.6.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>openejb-junit</artifactId>
-            <version>4.6.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+
+        <!--
+             <dependency>
+                 <groupId>org.infinispan</groupId>
+                 <artifactId>infinispan-jcache</artifactId>
+                 <version>7.0.0.Alpha3</version>
+             </dependency>
+
+             <dependency>
+                 <groupId>org.infinispan</groupId>
+                 <artifactId>infinispan-cdi</artifactId>
+                 <version>7.0.0.Alpha3</version>
+             </dependency>
+                -->
 
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa</artifactId>
+            <version>2.3.0</version>
+            <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.bval</groupId>
+            <artifactId>bval-jsr303</artifactId>
+            <version>0.5</version>
+            <scope>provided</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -149,6 +154,13 @@
             <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
 
     </dependencies>
 </project>
