--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,6 +29,8 @@
 	</modules>
 
     <dependencies>
+
+        <!-- The module api should not use these, consider moving these into iml and mock -->
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-data-module-api</artifactId>
@@ -39,6 +41,13 @@
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-data-module-impl</artifactId>
             <version>${ds.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>${myfaces.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
