--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <name>ref</name>
     <description>
-        The parent project for Marketplace Reference Project
+        https://github.com/karlkilden/ref
     </description>
 
     <modules>
@@ -18,17 +18,27 @@
     </modules>
 
     <properties>
+
         <ds.version>0.7</ds.version>
         <myfaces.version>2.2.3</myfaces.version>
         <openjpa.version>2.3.0</openjpa.version>
-        <public.module>0.6</public.module>
-        <public.module>0.6</public.module>
+        <log4j2.version>2.0-rc1</log4j2.version>
+        <tomee.version>1.6.0.2</tomee.version>
+
+        <!-- Boilerplate -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+
         <disable.tests>NONE</disable.tests>
 
 
     </properties>
 
     <dependencyManagement>
+
+        <!-- self -->
+
         <dependencies>
             <dependency>
                 <groupId>com.kildeen.ref</groupId>
@@ -56,35 +66,74 @@
                 <version>${project.version}</version>
             </dependency>
 
+
+            <!-- common -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.3.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>17.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>4.0</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
 
     <dependencies>
 
+
+        <!-- dependencies for all modules -->
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>16.0.1</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.openejb</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0-5</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -97,12 +146,7 @@
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-impl</artifactId>
             <version>0.7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!--<dependency>-->
@@ -123,16 +167,7 @@
         <!--<version>1.2.17</version>-->
         <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.0-rc1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.0-rc1</version>
-        </dependency>
+
 
     </dependencies>
 
