--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -166,6 +166,27 @@
             <version>1.0</version>
             <scope>compile</scope> <!-- this JSR spec API is not yet provided in our EE6 containers -->
         </dependency>
+
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-runtime</artifactId>
+            <version>2.2.0-RC2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-cdi</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-compat-tomcat7</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+
+
         <!--<dependency>-->
             <!--<groupId>org.apache.batchee</groupId>-->
             <!--<artifactId>batchee-jbatch</artifactId>-->
