--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,7 +41,7 @@
 
         <dependency>
             <groupId>com.kildeen.ref</groupId>
-            <artifactId>ref-core-mock</artifactId>
+            <artifactId>ref-core-impl</artifactId>
             <scope>runtime</scope>
         </dependency>
 
@@ -115,7 +115,12 @@
             <version>4.6.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
