--- a/web/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/web/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -18,3 +18,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy:MM:dd HH:mm:ss} %p  %c: %
 log4j.appender.socket=org.apache.log4j.net.SocketAppender
 log4j.appender.socket.port=7000
 log4j.appender.socket.remoteHost=127.0.0.1
+
+log4j.logger.org.primefaces.push = debug
+log4j.logger.org.atmosphere.cpr = debug
+log4j.logger.org.apache.geronimo.connector.work.WorkerContext = off
