--- a/core/impl/pom.xml
+++ b/core/impl/pom.xml
@@ -82,13 +82,15 @@
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-test-control-module-api</artifactId>
             <version>${ds.version}</version>
+            <scope>test</scope>
+
         </dependency>
 
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-test-control-module-impl</artifactId>
             <version>${ds.version}</version>
-            <scope>runtime</scope>
+            <scope>test</scope>
         </dependency>
 
 
@@ -183,6 +185,13 @@
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-compat-tomcat7</artifactId>
             <version>2.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.0</version>
+            <scope>provided</scope>
         </dependency>
 
 
