--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
 
-        <ds.version>0.7</ds.version>
+        <ds.version>1.0.0</ds.version>
         <myfaces.version>2.2.3</myfaces.version>
         <openjpa.version>2.3.0</openjpa.version>
         <log4j2.version>2.0-rc1</log4j2.version>
@@ -131,13 +131,13 @@
         <dependency>
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-api</artifactId>
-            <version>0.7</version>
+            <version>${ds.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-impl</artifactId>
-            <version>0.7</version>
+            <version>${ds.version}</version>
             <scope>runtime</scope>
         </dependency>
 
